# Pacman

./: .gitignore  CMakeLists.txt  README.md  build.sh
proposal/: proposal.tex
src/: DataStructures.cpp  DataStructures.h  DialogueBox.cpp  DialogueBox.h  Enemy.cpp  Enemy.h  Entity.h  Game.cpp  Game.h  GameState.h  Main.cpp  MainScreen.cpp  MainScreen.h  Pacman.cpp  Pacman.h  StateMachine.cpp  StateMachine.h  Structures.cpp  Structures.h  Texture.cpp  Texture.h
stuff/: interesting_things.md
